--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "normalize-scss": "^7.0.1",
     "rails-ujs": "^5.1.4",
     "turbolinks": "^5.0.3"
