--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "normalize-scss": "^7.0.1",
-    "rails-ujs": "^5.1.4",
-    "turbolinks": "^5.0.3"
+    "rails-ujs": "^5.1.4"
   },
   "scripts": {
     "heroku-postbuild": "yarn prod",
