Add form styling, date picker component

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "flatpickr": "^4.6.1",
     "font-awesome": "^4.7.0",
     "normalize-scss": "^7.0.1",
     "rails-ujs": "^5.1.4"
