--- a/shard.yml
+++ b/shard.yml
@@ -25,3 +25,6 @@ dependencies:
     version: ~> 0.4.1
   dotenv:
     github: gdotdesign/cr-dotenv
+  markd:
+    github: icyleaf/markd
+    version: ~> 0.1.1
