--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "color-themes-for-google-code-prettify": "^2.0.4",
     "flatpickr": "^4.6.1",
     "font-awesome": "^4.7.0",
     "medium-zoom": "^1.0.4",
